--- a/proxy/index.html
+++ b/proxy/index.html
@@ -3,17 +3,7 @@
 
 <head>
     <title>Conversation</title>
-    <style>
-        html {
-            color-scheme: light dark;
-        }
-
-        body {
-            width: 35em;
-            margin: 0 auto;
-            font-family: Tahoma, Verdana, Arial, sans-serif;
-        }
-    </style>
+    <link rel="stylesheet" href="theme.css">
 </head>
 
 <body>
